Closed Bug 1692886 Opened 4 years ago Closed 4 years ago

Telemetry::HTTP_TRANSACTION_RESTART_REASON is not recorded properly

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Just found that this probe Telemetry::HTTP_TRANSACTION_RESTART_REASON is not recorded correctly.
The reason is that we use mRestartCount as a condition to record this probe when the transaction is restarted at first attempt. However, mRestartCount is already increased in Restart() so the code in this block is never reached.

Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d1168bf01fb4 Record HTTP_TRANSACTION_RESTART_REASON correctly r=necko-reviewers,dragana
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: