Bug 1692886 - Record HTTP_TRANSACTION_RESTART_REASON correctly r=necko-reviewers,dragana

- Make sure we set the restart reason before calling Restart().
- Extend TRANSACTION_RESTART_REASON to also record the case for fast fallback.

Differential Revision: https://phabricator.services.mozilla.com/D105212